unpackaged/main/default/objects/litify__lp_List__c/litify__lp_List__c.object-meta.xml
<CustomObject>
    <label>List</label>
    <nameField>
        <label>List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>