unpackaged/main/default/objects/litify__lp_List__c/fields/litify__lp_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Auto_Number__c</fullName>
    <displayFormat>L-{00000000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>