unpackaged/main/default/objects/litify__lp_List__c/fields/litify__lp_Category__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category 1</fullName>
            </value>
            <value>
                <fullName>Category 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>