unpackaged/main/default/objects/litify__lp_List__c/fields/litify__lp_List_Code__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_List_Code__c</fullName>
    <label>List Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>