unpackaged/main/default/objects/litify__lp_List__c/fields/litify__lp_Plan__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>litify__lp_Plan__c</referenceTo>
    <relationshipLabel>Lists</relationshipLabel>
    <relationshipName>lp_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>