unpackaged/main/default/objects/litify__lp_List__c/fields/litify__lp_Related_To__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Related_To__c</fullName>
    <externalId>true</externalId>
    <label>Related To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>