unpackaged/main/default/objects/litify__lp_List__c/fields/litify__lp_SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>