unpackaged/main/default/objects/litify__lp_List__c/fields/litify__lp_Start_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Start_Date_Field__c</fullName>
    <label>Start Date Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>