unpackaged/main/default/objects/litify__lp_List__c/fields/litify__lp_Start_Date_Type__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Start_Date_Type__c</fullName>
    <label>Start Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USER_ENTERED_DATE</fullName>
                <default>true</default>
                <label>User Entered Date</label>
            </value>
            <value>
                <fullName>TARGET_OBJECT_DATE_FIELD</fullName>
                <label>Matter Date Field</label>
            </value>
            <value>
                <fullName>DATE_LIST_ADDED</fullName>
                <label>Date List is Added</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>