unpackaged/main/default/objects/litify__lp_List__c/fields/litify__lp_Template_Status__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Template_Status__c</fullName>
    <label>Template Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DRAFT</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>